--- a/blog.html
+++ b/blog.html
@@ -198,7 +198,7 @@ function renderMedia(url) {
 
   onAuthStateChanged(auth, async (user) => {
     if (!user) {
-      location.href = "login.html";
+      location.href = "index.html";
       return;
     }
     currentUser = user;
