--- a/index.html
+++ b/index.html
@@ -20,7 +20,16 @@
       padding:14px 16px; background:#ff9f1c; color:#fff;
       border-bottom:2px solid #e67e00; position:sticky; top:0; z-index:10
     }
-    header h1 { font-size:18px; margin:0; color:#fff }
+    header h1 { 
+      font-size:28px; margin:0; color:#fff; 
+      display:flex; align-items:center; gap:5px;
+    }
+    header h1 img {
+      width:38px;
+      height:38px;
+      border-radius:50%;
+      object-fit:cover;
+    }
     .btn {
       background:var(--primary); color:#fff; border:none;
       border-radius:10px; padding:10px 14px; font-weight:600; cursor:pointer
@@ -105,7 +114,7 @@
 </head>
 <body>
 <header>
-  <h1>📝 Habla Historia</h1>
+  <h1> <img src="logo.jpg"> Habla Historia</h1>
   <div class="actions">
     <button class="btn" id="btnLogout">Cerrar sesión</button>
   </div>
