--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
 <header>
   <h1> <img src="logo.jpg"> Habla Historia</h1>
   <div class="actions">
+    <button onclick="location.href='chat.html'" class="btn">💬</button>
     <button class="btn" id="btnLogout">Cerrar sesión</button>
   </div>
 </header>
@@ -184,7 +185,7 @@
     appId: "1:322467465610:web:98da756bc6d80f440a6073",
   };
 
-  const TEACHER_EMAILS = ["hey.junda@gmail.com", "yesenia.lisseth.flores@clases.edu.sv"];
+  const TEACHER_EMAILS = ["hey.junda@gmail.com", "yesenia.lisseth.flores@clases.edu.sv",];
   const LINK_API_KEY = "a30ad1652095af5a53163f76aec86711"; // 👉 consigue tu API key gratis en linkpreview.net
 
   // === Configuración Cloudinary (REEMPLAZA ESTOS VALORES) ===
