--- a/chat.html
+++ b/chat.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Chat Privado • HablaHistoria</title>
   <style>
+    <link rel="icon" href="logo.jpg" type="image/x-icon">
     :root{
       --primary:#ff9f1c; --accent:#e67e00; --bg:#fff; --card:#fffaf0; --border:#ffbf69;
       --muted:#666;
@@ -271,3 +272,4 @@ onAuthStateChanged(auth, async (user)=>{
 </script>
 </body>
 </html>
+
