--- a/chat.html
+++ b/chat.html
@@ -4,8 +4,8 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>Chat Privado • HablaHistoria</title>
+  <link rel="icon" href="logo.jpg" type="image/x-icon">
   <style>
-    <link rel="icon" href="logo.jpg" type="image/x-icon">
     :root{
       --primary:#ff9f1c; --accent:#e67e00; --bg:#fff; --card:#fffaf0; --border:#ffbf69;
       --muted:#666;
@@ -41,7 +41,7 @@
 </head>
 <body>
 <header>
-  <h1><img id="logo" src="logo.jpg" alt="Logo"> Chat Privado — HablaHistoria</h1>
+  <h1><img id="logo" src="logo.jpg" alt="Logo"> Chat Privado</h1>
   <div style="display:flex;gap:8px">
     <button id="btnIndex" class="btn ghost">🏠</button>
     <button id="btnLogout" class="btn ghost">Cerrar sesión</button>
@@ -272,4 +272,3 @@ onAuthStateChanged(auth, async (user)=>{
 </script>
 </body>
 </html>
-
