--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
 <header>
   <h1> <img src="logo.jpg"> Habla Historia</h1>
   <div class="actions">
-    <button onclick="location.href='chat.html'" class="btn">💬</button>
+    <button onclick="location.href='chat.html'" class="btn">Chats</button>
     <button class="btn" id="btnLogout">Cerrar sesión</button>
   </div>
 </header>
@@ -550,3 +550,4 @@
 </script>
 </body>
 </html>
+
