--- a/chat.html
+++ b/chat.html
@@ -43,7 +43,7 @@
 <header>
   <h1><img id="logo" src="logo.jpg" alt="Logo"> Chat Privado</h1>
   <div style="display:flex;gap:8px">
-    <button id="btnIndex" class="btn ghost">🏠</button>
+    <button id="btnIndex" class="btn ghost">Inicio</button>
     <button id="btnLogout" class="btn ghost">Cerrar sesión</button>
   </div>
 </header>
@@ -272,3 +272,4 @@ onAuthStateChanged(auth, async (user)=>{
 </script>
 </body>
 </html>
+
